ux: fix lots of layout shifting issues

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -3,4 +3,8 @@ $vh-color-primary: #88df95;
 $vh-color-secondary: #00262c;
 
 // various
-$vh-card-hover-opacity: .08
+$vh-card-hover-opacity: .08;
+
+// sizing
+$vh-app-bar-height: 72px;
+$vh-app-drawer-width: 256px;
